--- a/number.html
+++ b/number.html
@@ -1,39 +1,105 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Number Game</title>
-    <link rel="stylesheet" href="game.css" />
-    </head>
-    <body>
-<div class="grid">
-      <div class="square" id="1"></div>
-      <div class="square" id="2"></div>
-      <div class="square" id="3"></div>
-      <div class="square" id="4"></div>
-      <div class="square" id="5"></div>
-      <div class="square" id="6"></div>
-      <div class="square" id="7"></div>
-      <div class="square" id="8"></div>
-      <div class="square" id="9"></div>
-      <div class="square" id="10"></div>
-      <div class="square" id="11"></div>
-      <div class="square" id="12"></div>
-      <div class="square" id="13"></div>
-      <div class="square" id="14"></div>
-      <div class="square" id="15"></div>
-      <div class="extra" id="16"></div>
-      <div class="square empty" id="17"></div>
+Skip to content
+Search or jump to…
 
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@NeelMaddu268 
+Learn Git and GitHub without any code!
+Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
+
+
+NeelMaddu268
+/
+New-Game
+1
+00
+ Code
+ Issues 0
+ Pull requests 0 Actions
+ Projects 0
+ Wiki
+ Security 0
+ Insights
+ Settings
+New-Game
+/
+number.html
+ 
+
+1
+<!doctype html>
+2
+<html>
+3
+    <head>
+4
+        <meta charset="UTF-8">
+5
+        <title>Number Game</title>
+6
+    <link rel="stylesheet" href="game.css" />
+7
+    </head>
+8
+    <body>
+9
+<div class="grid">
+10
+      <div class="square" id="1"></div>
+11
+      <div class="square" id="2"></div>
+12
+      <div class="square" id="3"></div>
+13
+      <div class="square" id="4"></div>
+14
+      <div class="square" id="5"></div>
+15
+      <div class="square" id="6"></div>
+16
+      <div class="square" id="7"></div>
+17
+      <div class="square" id="8"></div>
+18
+      <div class="square" id="9"></div>
+19
+      <div class="square" id="10"></div>
+20
+      <div class="square" id="11"></div>
+21
+      <div class="square" id="12"></div>
+22
+      <div class="square" id="13"></div>
+23
+      <div class="square" id="14"></div>
+24
+      <div class="square" id="15"></div>
+25
+      <div class="extra" id="16"></div>
+26
+      <div class="square empty" id="17"></div>
+27
+​
+28
     </div>
+29
         <div>
+30
             <button class="button1" onclick="left()">Left</button>
+31
             <button class="button2" onclick="right()">Right</button>
+32
             <button class="button3" onclick="up()">Up</button>
+33
             <button class="button4" onclick="down()">Down</button>
+34
             <button class="button5" onclick="check()">Done?</button>
+35
         </div>
+36
         
+37
         <script src="number.js"></script>
-    </body>
-</html>
